[package]
name = "datahugger"
version = "0.5.4"
edition = "2021"
description = "Tool for fetching data and metadata from DOI or URL."
authors = ["Jusong Yu <jusong.yu@pm.me>"]
readme = "README.md"
repository = "https://github.com/EOSC-Data-Commons/datahugger-ng"
homepage = "https://github.com/EOSC-Data-Commons/datahugger-ng"
license = "MIT OR Apache-2.0"
keywords = ["science", "data", "research"]
exclude = [
    "misc/*",
    "python/*",
]

[[bin]]
name = "datahugger"
path = "src/main.rs"

[dependencies]
async-recursion = "1.1.1"
async-stream = "0.3.6"
async-trait = "0.1.89"
bytes = "1.11.1"
clap = { version = "4.5.60", features = ["derive"] }
digest = "0.10.7"
exn = "0.3.0"
futures-core = "0.3.31"
futures-util = "0.3.31"
hex = "0.4.3"
indicatif = "0.18.4"
md-5 = "0.10.6"
mime = "0.3.17"
mime_guess = "2.0.5"
native-tls = "0.2.14"
reqwest = { version = "0.13.2", features = ["__native-tls", "json", "rustls", "stream", "query"] }
serde = "1.0.228"
serde_json = "1.0.149"
sha1 = "0.10.6"
sha2 = "0.10.9"
tokio = { version = "1.50.0", features = ["fs", "io-util", "macros", "rt", "rt-multi-thread", "tracing"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
url = "2.5.8"
xmltree = "0.12.0"

[dev-dependencies]
wiremock = "0.6.5"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
