[package]
name = "datahuggerpy"
version = "0.5.4"
edition = "2021"
authors = ["Jusong Yu <jusong.yu@pm.me>"]
homepage = "https://github.com/EOSC-Data-Commons/datahugger-ng"

[lib]
name = "datahugger"
crate-type = ["cdylib"]

[dependencies]
datahugger = { path = ".." }
exn = "0.3.0"
indicatif = "0.18.3"
pyo3 = { version = "0.27", features = ["extension-module", "abi3", "abi3-py310", "auto-initialize", "experimental-inspect"] }
pyo3-async-runtimes = { version = "0.27", features = ["attributes", "tokio-runtime"] }
futures-util = "0.3.31"
futures-core = "0.3.31"
reqwest = "0.13.1"
tokio = { version = "1.49.0", features = ["rt"] }
openssl = { version = "0.10", features = ["vendored"], optional = true }
openssl-probe = { version = "0.1", optional = true }
futures = "0.3.31"

[features]
openssl-vendored = ["dep:openssl", "dep:openssl-probe"]

[package.metadata.maturin]
python-source = "datahugger"
